--- a/index.html
+++ b/index.html
@@ -270,6 +270,75 @@
             </div>
         </div>
     </section>
+    <div class="slaider">
+        <div class="container">
+            <div class="slider__items">
+                <div class="slider__item">
+                    <img class="slider__img" src="images/pict-1.jpg" alt="picture" >
+                </div>
+                <div class="slider__item">
+                    <img class="slider__img" src="images/pict-2.jpg" alt="picture" >
+                </div>
+                <div class="slider__item">
+                    <img class="slider__img" src="images/pict-3.jpg" alt="picture" >
+                </div>
+            </div>
+        </div>
+    </div>
+    <section class="price">
+        <div class="container">
+            <div class="price__inner">
+                <form class="form">
+                    <h4 class="form__title">
+                        ЗАКАЗАТЬ
+                    </h4>
+                    <p class="form__text">
+                        Если Вы хотите заказать велосипед, 
+                        оставьте свой контакт и наш менеджер 
+                        перезвонит вам в ближайшее время
+                    </p>
+                    <input class="form__input-name" type="text" placeholder="имя">
+                    <input class="form__input-phone" type="tel" placeholder="телефон">
+                    <p class="form__input-text">
+                        выберите желаемый цвет
+                    </p>
+                    <div class="form__label-box">
+                        <label class="form__label">
+                            <input class="form__input-radio" type="radio" name="radio">
+                            <div class="form__bike">
+                                <img class="form__bike-img" src="images/bike-green.jpg" alt="">
+                                <p class="form__bike-price"><span>62700 руб.</span></p>
+                            </div>
+                            <div class="form__radio-style form__radio-style--grey">
+
+                            </div>
+                        </label>
+                        <label class="form__label">
+                            <input class="form__input-radio" type="radio" name="radio" checked>
+                            <div class="form__bike">
+                                <img class="form__bike-img" src="images/bike-white.jpg" alt="">
+                                <p class="form__bike-price"><span>64700 руб.</span></p>
+                            </div>
+                            <div class="form__radio-style form__radio-style--white">
+
+                            </div>
+                        </label>
+                        <label class="form__label">
+                            <input class="form__input-radio" type="radio" name="radio">
+                            <div class="form__bike">
+                                <img class="form__bike-img" src="images/bike-red.jpg" alt="">
+                                <p class="form__bike-price"><span>65700 руб.</span></p>
+                            </div>
+                            <div class="form__radio-style form__radio-style--red">
+
+                            </div>
+                        </label>
+                    </div>
+                    <button class="form__btn" type="submit">Заказать</button>
+                </form>
+            </div>
+        </div>
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
