feat: add footer and scrolling

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <nav class="menu">
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Описание</a>
+                            <a class="menu__link" href="#info">Описание</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Характеристики</a>
+                            <a class="menu__link" href="#characteristics">Характеристики</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Стоимость</a>
+                            <a class="menu__link" href="#price">Стоимость</a>
                         </li>
                     </ul>
                 </nav>
@@ -46,7 +46,7 @@
                     <p class="bike__text">HIMO C26 – это новый электровелосипед от Xiaomi, который <br>
                         создан как для езды по городу, так и бездорожью. Он<br>
                          имеет мощный двигатель и емкий аккумулятор, благодаря<br> которым способен проезжать на одном заряде до 100 км, <br>что определенно выше, чем у большинства конкурентов. А <br>большие колеса с пневматическими шинами, дисковые тормоза,<br> 7-скоростная трансмиссия и эргономичное<br> сидение делают каждую поездку гораздо приятнее. </p>
-                            <a class="bike__link" href="#">ЗАКАЗАТЬ</a>
+                            <a class="bike__link" href="#price">ЗАКАЗАТЬ</a>
                         </div>
                <div class="bike__column bike__column-slider">
                    <div class="bike-slider">
@@ -77,7 +77,7 @@
             </div>
         </div>
     </section>
-    <section class="info">
+    <section class="info" id="info">
         <div class="container">
             <div class="info__inner">
                <img class="info__img" src="images/girl.jpg" alt="girl"> 
@@ -160,7 +160,7 @@
             </div>
         </div>
     </section>  
-    <section class="characteristics">
+    <section class="characteristics" id="characteristics">
         <div class="container">
             <h4 class="characteristics__head">
                 Характеристики
@@ -285,7 +285,7 @@
             </div>
         </div>
     </div>
-    <section class="price">
+    <section class="price" id="price">
         <div class="container">
             <div class="price__inner">
                 <form class="form">
@@ -339,6 +339,29 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <a class="footer__link" href="#" >Политика конфиденциальности</a>
+                <div class="footer__socail">
+                <a class="footer__social-link" href="">
+                    <img class="footer__social-img" src="images/instagram.svg" alt="" >
+                </a>
+                <a class="footer__social-link"href="">
+                    <img class="footer__social-img" src="images/facebook .svg" alt="" >
+                </a>
+                </div>
+                <div class="footer__contacts">
+                    <a class="footer__contacts-link"href="tel:+38 050 677 77 77">
+                        <img class="footer__contacts-img"  src="images/phone.svg" alt="phone" >
+                       <span>+38 050 677 77 77</span></a>
+                    <a class="footer__contacts-link"href="mailto:elektrobikeukr@gmail.com">
+                       <img class="footer__contacts-img" src="images/mail.svg" alt="email" >
+                        <span>elektrobikeukr@gmail.com</span></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
